--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "jsonschema==4.25.1",
     "jsonschema-specifications==2025.9.1",
     "kiwisolver==1.4.9",
+    "lightgbm>=4.6.0",
     "markupsafe==3.0.3",
     "matplotlib==3.10.7",
     "narwhals==2.13.0",
